--- a/css/styles.css
+++ b/css/styles.css
@@ -1,51 +1,48 @@
 body{
-  font-family: 'Montserrat';
-  margin: 0;
-}
-h1{
-  font-family: 'Montserrat';
-  font-weight: 900;
-  font-size: 3.5rem;
-  line-height: 1.5;
-}
+   font-family: 'Montserrat';
+   margin: 0;
+ }
+ h1{
+   font-family: 'Montserrat';
+   font-weight: 900;
+   font-size: 3.5rem;
+   line-height: 1.5;
+ }
 
-/* title */
-#title{
+ /* title */
+ #title{
 
-}
-.container-fluid{
-  padding: 0;
-  position: relative;
-  z-index: 1;
-}
+ }
+ .container-fluid{
+   padding: 0;
+   position: relative;
+   z-index: 1;
+ }
 
-.navbar-brand p{
-  font-family: 'Zen Dots', cursive;
-  font-size: 50px;
-  margin-bottom: 0;
-}
+ .navbar-brand p{
+   font-family: 'Zen Dots', cursive;
+   font-size: 50px;
+   margin-bottom: 0;
 
-.nav-link{
-  font-size: 1.2rem;
-}
+ }
 
-.title-heading{
-  margin: 250px 0;
-}
-.title-image{
-  position: fixed;
-  z-index: -1;
-}
-.title-container{
-  margin: 10% auto 7%;
-}
+ .nav-link{
+   font-size: 1.2rem;
+ }
 
-@media (max-width: 991px){
-  .title-container{
-    text-align: center;
-    padding: 5%;
-  }
-  .title-image{
-    height: 800px;
-  }
-}
+ .title-heading{
+   margin: 250px 0;
+   padding-left: 50px;
+ }
+ .title-image{
+   position: fixed;
+   z-index: -1;
+ }
+
+
+ @media (max-width: 991px){
+   .title-container{
+     text-align: center;
+     padding: 5%;
+   }
+ }
