--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,398 @@
+body {
+  background-color: #fff;
+  font-family: 'Montserrat';
+  margin: 0;
+}
 
+h1 {
+  font-family: 'Montserrat';
+  font-weight: 700;
+  font-size: 3.5rem;
+  line-height: 1.5;
+}
+
+p {
+  font-size: 20px;
+  color: grey;
+}
+
+a {
+  text-decoration: none;
+}
+
+/* Nav-bar */
+.company-name {
+  float: left;
+}
+
+.company-column {
+  margin: 0;
+  padding-right: 760px;
+}
+
+.navbar-brand {
+  color: black;
+  font-family: 'Zen Dots', cursive;
+  font-size: 50px;
+}
+
+.nav-bar {
+  overflow: hidden;
+  background-color: white;
+  padding: 0 10px;
+}
+
+.nav-link {
+  color: grey;
+  float: right;
+  padding: 0 10px 0 10px;
+  font-size: 1.2rem;
+  position: relative;
+}
+
+.nav-link:hover {
+  color: black;
+}
+
+.nav-link:before {
+  content: "";
+  position: absolute;
+  top: 110%;
+  left: 0;
+  width: 0%;
+  height: 2px;
+  border-bottom: 2px solid #00adb5;
+  transition: all .3s linear;
+}
+
+.nav-link:hover:before {
+  width: 100%;
+}
+
+/* title */
+#title {}
+
+.title-container {
+  background-color: white;
+  max-width: 550px;
+}
+
+.title-text {
+  margin: 200px 0;
+  padding: 20px;
+}
+
+.title-heading {
+  font-family: 'Raleway', sans-serif;
+  font-size: 63px;
+  font-weight: 900;
+  margin: 0;
+}
+
+.title-image {
+  width: 1440px;
+  position: fixed;
+  z-index: -3;
+}
+
+
+
+/* About */
+.about-image {
+  max-width: 600px;
+  margin: 0 150px 0 0;
+  float: left;
+}
+
+.about-text {
+  margin-right: 120px;
+}
+
+.about {
+  background-color: #fff;
+  padding: 7% 5% 10%;
+}
+
+.about-heading {
+  font-size: 3.5rem;
+  padding: 5% 0 0;
+  margin-top: 50px;
+}
+
+.about-image {
+  width: 90%;
+}
+
+/* Services */
+.services p, h2 {
+  padding-left: 30px;
+}
+
+.services {
+  padding: 6% 0 6%;
+  background-color: #fff;
+  background-image: url(file:///Users/dixit/Desktop/DASH/image/services.jpg);
+  width: 100%;
+}
+
+.services-column {
+  padding: 0 6%;
+  max-width: 400px;
+}
+
+.services-heading {
+  font-size: 3.5rem;
+  margin-top: 0;
+}
+
+.services-image {
+  padding-left: 50px;
+  padding-bottom: 30px;
+}
+
+.services p {
+  color: #000;
+  font-size: 16px;
+}
+
+/* Projects */
+.projects {
+  background-color: #fff;
+  text-align: center;
+  padding-bottom: 7%;
+}
+
+.projects-text {
+  padding: 5% 25% 3%;
+}
+
+.projects-heading {
+  font-size: 3.5rem;
+  margin: 0;
+}
+
+/* Contact Us */
+input[type=text], select, textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  resize: vertical;
+}
+
+label {
+  padding: 12px 12px 12px 0;
+  display: inline-block;
+}
+
+input[type=submit] {
+  background-color: #04AA6D;
+  color: white;
+  margin-top: 20px;
+  margin-left: 135px;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  float: left;
+}
+
+.container {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
+}
+
+.col-25 {
+  float: left;
+  width: 10%;
+  margin-top: 6px;
+}
+
+.col-75 {
+  float: left;
+  width: 75%;
+  margin-top: 6px;
+}
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+@media screen and (max-width: 600px) {
+  .col-25, .col-75, input[type=submit] {
+    width: 100%;
+    margin-top: 0;
+  }
+}
+
+/* footer */
+footer {
+  position: fixed;
+  bottom: 0;
+}
+
+@media (max-height:800px) {
+  footer {
+    position: static;
+  }
+
+  header {
+    padding-top: 40px;
+  }
+}
+
+.footer-distributed {
+  background-color: #2c292f;
+  box-sizing: border-box;
+  width: 100%;
+  text-align: left;
+  font: bold 16px sans-serif;
+  padding: 50px 50px 60px 50px;
+}
+
+.footer-distributed .footer-left,
+.footer-distributed .footer-center,
+.footer-distributed .footer-right {
+  display: inline-block;
+  vertical-align: top;
+}
+
+
+.footer-distributed .footer-left {
+  width: 30%;
+}
+
+.footer-distributed h3 {
+  color: #ffffff;
+  font: normal 36px 'Cookie', cursive;
+  margin: 0;
+}
+
+.footer-distributed .footer-left img {
+  width: 30%;
+}
+
+.footer-distributed h3 span {
+  font-family: 'Zen Dots', cursive;
+  color: #e0ac1c;
+}
+
+.footer-distributed .footer-links {
+  color: #ffffff;
+  margin: 20px 0 12px;
+}
+
+.footer-distributed .footer-links a {
+  display: inline-block;
+  line-height: 1.8;
+  text-decoration: none;
+  color: inherit;
+}
+
+.footer-distributed .footer-company-name {
+  color: #8f9296;
+  font-size: 14px;
+  font-weight: normal;
+  margin: 0;
+}
+
+.footer-distributed .footer-center {
+  width: 50%;
+}
+
+.footer-distributed .footer-center i {
+  background-color: #33383b;
+  color: #ffffff;
+  font-size: 25px;
+  width: 38px;
+  height: 38px;
+  border-radius: 50%;
+  text-align: center;
+  line-height: 42px;
+  margin: 10px 15px;
+  vertical-align: middle;
+}
+
+.footer-distributed .footer-center i.fa-envelope {
+  font-size: 17px;
+  line-height: 38px;
+}
+
+.footer-distributed .footer-center p {
+  display: inline-block;
+  color: #ffffff;
+  vertical-align: middle;
+  margin: 0;
+}
+
+.footer-distributed .footer-center p span {
+  display: block;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 2;
+}
+
+.footer-distributed .footer-center p a {
+  color: #e0ac1c;
+  text-decoration: none;
+  ;
+}
+
+.footer-distributed .footer-right {
+  width: 15%;
+}
+
+.footer-distributed .footer-company-about {
+  line-height: 20px;
+  color: #92999f;
+  font-size: 13px;
+  font-weight: normal;
+  margin: 0;
+}
+
+.footer-distributed .footer-company-about span {
+  display: block;
+  color: #ffffff;
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+.footer-distributed .footer-icons {
+  margin-top: 25px;
+}
+
+.footer-distributed .footer-icons a {
+  display: inline-block;
+  width: 35px;
+  height: 35px;
+  cursor: pointer;
+  background-color: #33383b;
+  border-radius: 2px;
+  font-size: 20px;
+  color: #ffffff;
+  text-align: center;
+  line-height: 35px;
+  margin-right: 3px;
+  margin-bottom: 5px;
+}
+
+@media (max-width: 880px) {
+
+  .footer-distributed .footer-left,
+  .footer-distributed .footer-center,
+  .footer-distributed .footer-right {
+    display: block;
+    width: 100%;
+    margin-bottom: 40px;
+    text-align: center;
+  }
+
+  .footer-distributed .footer-center i {
+    margin-left: 0;
+  }
+}
